--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,7 +2,23 @@
   box-sizing: border-box;
 }
 
+header {
+  position: fixed;
+  width: 100%;
+  height: 8%;
+  margin: 0 auto;
+  background-color: rgb(55, 53, 168);
+  box-shadow: 0px 4px 24px rgba(105, 105, 105, 0.1);
+  top: 0;
+  z-index: 3;
+}
+
+section {
+  margin: 80px;
+}
+
 body {
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -12,12 +28,28 @@ body {
   line-height: 1.5;
 }
 
+.search-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search_btn {
+  width: 35px;
+  height: 35px;
+  background-color: #ffffff;
+  background-image: url(../img/search.png);
+  background-repeat: no-repeat;
+  border: none;
+  margin-left: -45px;
+  margin-bottom: 2px;
+}
+
 #search-box {
   font: inherit;
   padding: 8px;
   width: 420px;
-  margin-top: -30px;
-  margin-left: 40%;
+  margin-top: 10px;
   margin-bottom: 16px;
   border-radius: 10px;
   box-shadow: 10px 5px 5px #212121;
