--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,13 +14,14 @@ header {
 }
 
 section {
+  display: flex;
   margin: 80px;
 }
 
 body {
   margin: 0 auto;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, 'BlinkMacSystemFont', 'Segoe UI', Roboto, Oxygen,
+    'Ubuntu', 'Cantarell', 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgba(218, 218, 218, 0.6);
@@ -62,80 +63,61 @@ body {
   border: 2px solid white;
 }
 
-li {
+.gallery {
   display: flex;
-  align-items: center;
-  gap: 10px;
-  margin-top: 30px;
-  font-size: 22px;
-  font-weight: 700;
-  line-height: 1.8;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
+.photo-card {
+  background-color: #ffffff;
+  display: flex;
+  flex-wrap: wrap;
+  transition-property: color, background-color, box-shadow, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  width: 370px;
+  border: 1px solid white;
+  border-top: none;
+  margin: 10px;
+}
 
+.photo-card:hover,
+.photo-card:focus {
+  cursor: pointer;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition-property: color, background-color, box-shadow, opacity, transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(0);
+  opacity: 1;
+}
 
 a {
-  display: flex;
-  gap: 30px;
   text-decoration: none;
-
-}
-
-h1 {
-  margin-left: 41%;
+  color: #212121;
 }
 
 img {
-  width: 160px;
-  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 370px;
+  height: 260px;
+  object-fit: cover;
 }
 
-.country-list {
-  margin-left: 28%;
+.info {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  text-align: center;
 }
 
-.country-info {
-  margin-top: 50px;
-  margin-left: 38%;
-  width: 300px;
-}
-
-.inf {
-  font-size: 22px;
-  font-style: italic;
-  color: #7e6e40;
-}
-
-@media screen and (max-width: 767px) {
-  .country-list {
-    margin-left: auto;
-  }
-
-  .country-info {
-    margin-top: 50px;
-    margin-left: 10px;
-    width: 300px;
-  }
-
-  h1 {
-    margin-top: 80px;
-    margin-left: 5%;
-  }
-
-  #search-box {
-    font: inherit;
-    padding: 8px;
-    width: 320px;
-    margin-top: -30px;
-    margin-left: 5%;
-    margin-bottom: 16px;
-    border-radius: 10px;
-    box-shadow: 10px 5px 5px #212121;
-    border: 2px solid white;
-  }
-
-  img {
-    width: 100px;
-    height: 80px;
-  }
+.info-item {
+  display: flex;
+  font-size: 14px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: var(--contacts-color);
 }
