--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,6 +15,14 @@ header {
   z-index: 3;
 }
 
+@media screen and (max-width: 767px) {
+  header {
+    width: 100%;
+    display: block;
+    align-items: center;
+  }
+}
+
 section {
   margin: 5%;
 }
@@ -31,11 +39,27 @@ body {
 }
 
 h1 {
+
   color: rgba(0, 0, 0, 0.8);
+}
+
+@media screen and (max-width: 767px) {
+  h1 {
+    padding-left: 20px;
+    margin: 0 auto;
+    font-size: 15px;
+  }
 }
 
 h2 {
   margin-top: 80px;
+}
+
+@media screen and (max-width: 767px) {
+  h2 {
+    text-align: center;
+    margin-top: 100px;
+  }
 }
 
 .search-form {
@@ -66,6 +90,12 @@ h2 {
   border: 2px solid white;
 }
 
+@media screen and (max-width: 767px) {
+  #search-box {
+    width: 300px;
+  }
+}
+
 #search-box:focus,
 #search-box:hover {
   border-color: white;
@@ -76,6 +106,14 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
+}
+
+@media screen and (max-width: 767px) {
+  .gallery {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+  }
 }
 
 .photo-card {
